--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=seu_email@gmail.com
 SMTP_PASSWORD=sua_senha_de_app
+
+# Configurações de Logging
+LOG_CHANNEL_ID=1402387427103998012  # ID do canal Discord para logs de erro/warn
