Ajustes para solicitar mentoria

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,14 @@
-# Configurações do Discord
-DISCORD_TOKEN=cole_seu_token_aqui
-GUILD_ID=123456789  # Opcional - ID do servidor Discord
+# Configuracoes do Bot Discord de Mentoria
+# Copie este arquivo para .env e preencha com seus valores
 
-# Configurações do Banco de Dados PostgreSQL
-DATABASE_URL=postgresql://usuario:senha@localhost:5432/nasa_spaceapps
+# Token do seu bot Discord
+DISCORD_TOKEN=seu_token_aqui
 
-# Configurações de Email (para verificação)
-SMTP_SERVER=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=seu_email@gmail.com
-SMTP_PASSWORD=sua_senha_de_app
+# ID do servidor Discord (opcional - se nao especificado, usara o primeiro servidor disponivel)
+GUILD_ID=
 
-# Configurações de Logging
-LOG_CHANNEL_ID=1402387427103998012  # ID do canal Discord para logs de erro/warn
+# URL de conexao com PostgreSQL
+DATABASE_URL=postgresql://usuario:senha@localhost:5432/mentoria_db
+
+# ID do canal para logs de erro/warning (opcional)
+LOG_CHANNEL_ID=
