--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,9 @@ DISCORD_TOKEN=seu_token_aqui
 GUILD_ID=
 
 # URL de conexao com PostgreSQL
-DATABASE_URL=postgresql://usuario:senha@localhost:5432/mentoria_db
+# Para Docker: usar o service name 'postgres' como host
+# Para desenvolvimento local: usar localhost
+DATABASE_URL=postgresql://nasa_user:nasa_password_123@postgres:5432/nasa_spaceapps_bot
 
 # ID do canal para logs de erro/warning (opcional)
-LOG_CHANNEL_ID=
+LOG_CHANNEL_ID=1402387427103998012
