--- a/.dockerignore
+++ b/.dockerignore
@@ -65,3 +65,20 @@ docs/
 # Temporary files
 tmp/
 temp/
+
+# GitHub Actions
+.github/
+
+# Deployment docs
+DEPLOYMENT.md
+
+# Migration files (can be excluded if not needed in container)
+migration_*.py
+
+# Database dumps
+*.sql
+*.dump
+
+# Backup files
+*.bak
+backup*
