--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       POSTGRES_DB: nasa_spaceapps_bot
       POSTGRES_USER: nasa_bot_user
-      POSTGRES_PASSWORD: senha123
+      POSTGRES_PASSWORD: 1029384756Gh!
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
